# crew_to_deploy

./: .gitignore  README.md  pyproject.toml  report.md
src/crew_to_deploy/: crew.py  main.py
