[project]
name = "crew_to_deploy"
version = "0.1.0"
description = "crew_to_deploy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
crew_to_deploy = "crew_to_deploy.main:run"
run_crew = "crew_to_deploy.main:run"
train = "crew_to_deploy.main:train"
replay = "crew_to_deploy.main:replay"
test = "crew_to_deploy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
